--- a/_includes/partials/seo.njk
+++ b/_includes/partials/seo.njk
@@ -15,14 +15,14 @@
 <meta content="{{image or metadata.metasocial.image}}" name="twitter:image">
 <meta content="{{image or metadata.metasocial.image}}" name="facebook:image">
 <meta content="{{image or metadata.metasocial.image}}" name="og:image">
-<link href="{{metadata.favicon}}" rel="icon" type="image/x-icon">
-<link rel="apple-touch-icon" href="{{metadata.favicon}}">
+<link href="{{ base }}{{metadata.favicon}}" rel="icon" type="image/x-icon">
+<link rel="apple-touch-icon" href="{{ base }}{{metadata.favicon}}">
 <meta content="{{metadata.metasocial.facebook}}" property="facebook:author">
 <meta content="{{metadata.metasocial.twitteruser}}" property="twitter:author">
 <meta content="{{metadata.metasocial.twitter}}" name="twitter:site">
 <meta property="og:type" content="website">
 <link rel="canonical" href="{{metadata.url}}{{page.url}}">
-<link rel="alternate" href="feed/feed.xml" type="application/atom+xml" title="{{ metadata.title }}">
+<link rel="alternate" href="{{ base }}/feed/feed.xml" type="application/atom+xml" title="{{ metadata.title }}">
 <meta name="language" content="{{metadata.language}}">
 <meta name="locale" content="{{metadata.locale}}">
 <meta property="og:locale" content="{{metadata.locale}}">
